3/31/11 encapsulate getMax* calls in DielectricModel, pass ranges and reference magnitudes into view nodes
3/31/11 convert current amplitude to an observable Property<Double>
3/31/11 MAJOR changes to the model in preparation for supporting multiple capacitors, moved lots of stuff from BatteryCapacitorCircuit to Capacitor
3/31/11 generalize, remove many dependencies on BatteryCapacitorCircuit by creating interface ICircuit
3/28/11 strip leading whitespace from all source files, so that formatting won't obscure future changes
3/28/11 restore WorldLocationProperty, this bit is useful
3/28/11 back out all of the "public final" property stuff I did, it started to become an inconsistent mess (revert to [49849] 3/16/11)
3/28/11 make battery's observable properties "public final"
3/28/11 make E-field meter's observable properties "public final"
3/28/11 make voltmeter's observable properties "public final"
3/28/11 make bar meter's observable properties "public final"
3/28/11 add WorldLocationProperty, a 3D location constrained to the bounds of the World
3/16/11 enable Multiple Capacitors tab, make it the default for dev
3/9/11 add minor tick marks to dielectric constant slider
2/28/11 migrate Dimension3D to phetcommon.math
2/28/11 migrate ShapeUtils to phetcommon.view.utils
2/28/11 #2758 migrate PolygonUtils from capacitor-lab to phetcommon.math
12/10/10 use PropertyRadioButton for selection of dielectric charge view
12/10/10 migrate PropertyCheckBox to phetcommon
# 1.00.00 (46915) Dec 7, 2010
12/7/10 added screenshot for 1.00 deployment
# 0.00.53 (46899) Dec 6, 2010
12/6/10 set dielectric constant of air to 1, so that the circuit is effectively in a vacuum (see detailed code comment)
12/6/10 fix layout issues with vector labels in E-Field detector
12/6/10 move battery voltage slider up a few pixels so that the slider thumb always stays inside the battery image
12/6/10 attempt at color coding the backgrounds of E-Field vector labels
# 0.00.52 (46811) Dec 3, 2010